--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AHOF MV LIVE COUNTER</title>
+  <title>AHOF MV VIEWS COUNTER</title>
   <style>
     * {
       box-sizing: border-box;
@@ -125,7 +125,7 @@
 <body>
 
   <header>
-    <h1>AHOF MV LIVE COUNTER</h1>
+    <h1>AHOF MV VIEWS COUNTER</h1>
   </header>
 
   <main>
